# AquaVision

./: .gitignore  README.md  ROADMAP.md  WORKFLOWS.md  clean-venv.sh  demo.py  pyproject.toml  setup-venv.sh  train_yolo.py  update-venv.sh
SlothStudio/: SlothStudio.py
SlothStudio/config/: assets.py
SlothStudio/ui/: configure.py  window.py
SlothStudio/utils/: load_config.py
datasets/: readme.md
datasets/koi/: instruction.txt
datasets/koi/metadata/: dataset_counter.json  processed_images.json  processed_videos.json
docs/computer_vision/: confusion_matrix.md  mAP.md
docs/label-studio/: label_studio.md
docs/yolo/: generation.md  top8_open_source_object_tracking_tools.md  yolov11.md
examples/: _entry_download_pothole_dataset.sh  _entry_download_pothole_roboflow_dataset.sh  _entry_train_yolo26_segmentation.sh  download_pothole_dataset.py  download_pothole_roboflow_dataset.py  readme.md
helpers/: download_youtube_video.py  extract_frames.py  inference_test.py  process_raw_dataset.py
scripts/: _entry_download_youtube_video.sh  _entry_process_raw_dataset.sh  _entry_video_frame_extract.sh  _entry_yolo_inference_test.sh  _entry_yolo_training.sh  _entry_yolo_validation.sh  download_ultralytics_yolo.sh
src/aquavision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
